--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-.DS_Store
+
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -104,3 +104,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Omitir el Directorio DS_Store en MAC
+**/.DS_Store
